# grpc-unity-deadlock-reproduction

./: .gitattributes  .gitignore  gen-cert.sh
Assets/Plugins/Grpc.Core.Api/lib/net45/: Grpc.Core.Api.xml
Assets/Scenes/: TestScene.unity
Assets/Scripts/: GrpcLogger.cs  GrpcTest.cs
Assets/Scripts/proto/: Test.cs  TestGrpc.cs
Assets/StreamingAssets/: README.md  ca.crt
ProjectSettings/: ProjectSettings.asset
proto/: .signature.p7s  README.md  codegen.bat  codegen.sh  test.proto
proto/grpc.tools/: Grpc.Tools.nuspec  [Content_Types].xml
proto/grpc.tools/_rels/: .rels
proto/grpc.tools/tools/macosx_x64/: grpc_csharp_plugin
proto/grpc.tools/tools/macosx_x86/: grpc_csharp_plugin
secrets/: ca.csr.conf  ca.key  test.crt  test.csr  test.csr.conf  test.key
test-server-go/: README.md  go.mod  go.sum  main.go
test-server-go/grpc/: test.pb.go
test-server-rust/: Cargo.toml  README.md  build.rs
test-server-rust/src/: main.rs
