[package]
name = "test-server"
version = "1.0.0"
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.1", features = [ "env-filter"] }
tracing-futures = { version = "0.2", features = [ "tokio" ] }
futures = "0.3"
futures-util = "0.3"
futures-locks = "0.5"
async-stream = "0.2.0"
tokio = { version = "0.2", features = [ "full" ] }
hyper = { version = "0.13" }
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"
tower = "0.3"
http = "0.2"
tonic = { git = "https://github.com/hyperium/tonic", branch = "master", features = [ "tls", "transport" ] }

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic", branch = "master" }
